# e2e-secretstore

./: AddressSharing.sol  Cargo.toml  README.md  SSPermissions.json  SSPermissions.sol  contract-address.txt
network/: alice.pwd  ercolani.txt  not_working_machines.txt  ranzani.txt  ss-template.toml  ss1.toml  start.sh  start_ssh.sh  stop.sh  users.toml
src/: blockchain.rs  lib.rs
src/api/: contract.rs  mod.rs  secretstore.rs  shadow.rs
