[package]
name = "crypto-secretstore"
version = "0.1.0"
authors = ["Julian Sparber <julian@sparber.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
primitive-types = { version = "0.6.2", features = ["serde"] }
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
reqwest = { version = "0.10.4", features = ["blocking"] }
sha2 = "0.8.1"
hex = "0.4.2"
failure = "0.1.7"
url = "2.1.1"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
tokio-core = "0.1"
ethcontract = "0.5"
web3 = "0.10"
rand = "0.7.3"

[build-dependencies]
ethcontract-generate = "0.5"
